--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,96 @@
-# GenSteer: A Generative Steering Engine for Autonomous Test-Time Alignment
-# Core dependencies for training, inference, and evaluation
-
-# Deep Learning Framework
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
-
-# HuggingFace Ecosystem
-transformers>=4.35.0
-tokenizers>=0.14.0
-datasets>=2.14.0
-accelerate>=0.24.0
-peft>=0.6.0
-
-# Training & Optimization
-torch-optimizer>=0.3.0
-deepspeed>=0.10.0
-wandb>=0.15.0
-
-# Data Processing
-numpy>=1.24.0
-pandas>=2.0.0
-scipy>=1.10.0
-
-# Utilities
-tqdm>=4.65.0
-jsonlines>=3.1.0
-pyyaml>=6.0
-omegaconf>=2.3.0
-
-# Evaluation & Metrics
-scikit-learn>=1.3.0
-rouge-score>=0.1.2
-nltk>=3.8.0
-sacrebleu>=2.3.1
-
-# Distributed Training
-mpi4py>=3.1.0
-
-# Development & Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.0.0
-isort>=5.12.0
-flake8>=6.0.0
-pre-commit>=3.4.0
-
-# Optional: Advanced Features
-# flash-attn>=2.3.0  # For flash attention (requires specific CUDA setup)
-# apex  # For NVIDIA Apex optimizations
-# fairscale>=0.4.13  # For additional distributed training utilities
-
-# Visualization (Optional)
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.15.0
-
-# Jupyter (Development)
-jupyter>=1.0.0
-ipywidgets>=8.0.0
-notebook>=6.5.0
-
-# System Dependencies
-psutil>=5.9.0
-gpustat>=1.1.0
+accelerate==1.10.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.10.0
+async-timeout==5.0.1
+attrs==25.3.0
+blobfile==3.0.0
+certifi==2025.8.3
+charset-normalizer==3.4.2
+click==8.2.1
+contourpy==1.3.2
+cycler==0.12.1
+datasets==4.0.0
+dill==0.3.8
+distro==1.9.0
+einops==0.8.1
+exceptiongroup==1.3.0
+filelock==3.18.0
+flash_attn==2.8.2
+fonttools==4.59.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+hf-xet==1.1.7
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.34.4
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+kiwisolver==1.4.8
+lxml==6.0.1
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mpmath==1.3.0
+multidict==6.6.3
+multiprocess==0.70.16
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+openai==1.101.0
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+platformdirs==4.3.8
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+pyarrow==21.0.0
+pycryptodomex==3.23.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2025.7.34
+requests==2.32.4
+safetensors==0.6.2
+seaborn==0.13.2
+sentencepiece==0.2.1
+sentry-sdk==2.34.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sympy==1.14.0
+tiktoken==0.11.0
+tokenizers==0.21.4
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.55.0
+triton==3.4.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+wandb==0.21.1
+xxhash==3.5.0
+yarl==1.20.1
